--- a/EatSmart/app/src/main/res/layout/activity_login_page.xml
+++ b/EatSmart/app/src/main/res/layout/activity_login_page.xml
@@ -88,6 +88,7 @@
         android:id="@+id/button2"
         android:layout_alignTop="@+id/button"
         android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignEnd="@+id/textView"
+        android:onClick="signUp" />
 
 </RelativeLayout>
