--- a/EatSmart/app/src/main/res/layout/activity_home_customer.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_customer.xml
@@ -15,4 +15,15 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="121dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Search"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="71dp" />
 </RelativeLayout>
