--- a/EatSmart/app/src/main/res/layout/activity_home_customer.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_customer.xml
@@ -4,7 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.home_customer">
+    tools:context="com.example.jerem.eatsmart.home_customer"
+    android:visibility="visible"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,8 +24,25 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Search"
         android:id="@+id/textView10"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="71dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_marginBottom="47dp"
+        android:clickable="true"
+        android:contentDescription="@string/welcome_customer"
+        android:src="@drawable/button_ifl"
+        android:maxHeight="120dp"
+        android:maxWidth="120dp"
+        android:minHeight="120dp"
+        android:minWidth="120dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@null"
+        android:onClick="ifl_search" />
 </RelativeLayout>
