--- a/EatSmart/app/src/main/res/menu/menu_home_customer.xml
+++ b/EatSmart/app/src/main/res/menu/menu_home_customer.xml
@@ -2,6 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.jerem.eatsmart.home_customer">
+    <item android:id="@+id/action_search" android:title="@string/action_search" android:icon="@drawable/ic_action_search"
+        app:showAsAction="ifRoom|collapseActionView" app:actionViewClass="android.support.v7.widget.SearchView"/>
+    <item android:id="@+id/action_spinner" android:title="@string/action_spinner" android:icon="@drawable/ic_action_spinner"
+        app:showAsAction="ifRoom|collapseActionView" app:actionViewClass="android.support.v7.widget.Spinner"/>
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        app:showAsAction="ifRoom" android:icon="@drawable/ic_action_settings" />
+
 </menu>
