--- a/EatSmart/app/src/main/res/layout/activity_sign_up.xml
+++ b/EatSmart/app/src/main/res/layout/activity_sign_up.xml
@@ -1,25 +1,91 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.example.jerem.eatsmart.SignUPActivity">
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignUPActivity"
+    android:background="@drawable/customer_signup_bg"
+    android:nestedScrollingEnabled="false">
 
-    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_sign_up"
+        android:id="@+id/buttonCreateAccount"
+        android:textColor="#ff031c"
+        android:background="#ffffff"
+        android:layout_marginTop="24dp"
+        android:layout_below="@+id/editTextConfirmPassword"
+        android:layout_centerHorizontal="true" />
 
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_sign_up"
+        android:id="@+id/textView"
+        android:textColor="#ffffff"
+        android:singleLine="true"
+        android:typeface="sans"
+        android:hint="@string/username_text"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp" />
 
-    </android.support.design.widget.AppBarLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="@drawable/name_logo_transparentbg"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:maxHeight="100dp"
+        android:minWidth="100dp"
+        android:scaleType="fitCenter"
+        android:layout_toLeftOf="@+id/buttonCreateAccount"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-    <include layout="@layout/content_sign_up" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextUserName"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:background="#ffffff"
+        android:hint="@string/username_text"
+        android:textAlignment="center"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:singleLine="true" />
 
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextPassword"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:background="#ffffff"
+        android:hint="@string/password_text"
+        android:textAlignment="center"
+        android:layout_below="@+id/editTextUserName"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="37dp"
+        android:password="true"
+        android:singleLine="true" />
 
-</android.support.design.widget.CoordinatorLayout>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextConfirmPassword"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:background="#ffffff"
+        android:hint="@string/confirm_password_text"
+        android:textAlignment="center"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:password="true"
+        android:singleLine="true" />
+</RelativeLayout>
