--- a/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
+++ b/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
@@ -1,39 +1,244 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical" >
+    android:gravity="center_vertical"
+    android:weightSum="1"
+    tools:context=".restaurantSignUp"
+    android:background="@drawable/ro_signup_3">
 
-    <EditText
-        android:id="@+id/editTextUserName"
-        android:hint="Restaurant Name"
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/name_logo_transparentbg"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/scrollView"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_restaurant_signup"
+        android:id="@+id/textView2"
+        android:layout_alignBottom="@+id/imageView3"
+        android:textColor="#ffffff"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/scrollView"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal" />
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/editTextConfirmPassword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Confirm Password"
-        android:inputType="textPassword" />
+        android:layout_height="130dp"
+        android:fillViewport="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/scrollView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.27"
+            android:layout_alignBottom="@+id/scrollView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+            <EditText
+                android:id="@+id/editTextUserName"
+                android:hint="@string/username_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:background="#ffffff"
+                android:minWidth="300dp"
+                android:minHeight="40dp"
+                android:singleLine="true" />
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/password_text"
+                android:inputType="textPassword"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:background="#ffffff"
+                android:minWidth="300dp"
+                android:minHeight="40dp"
+                android:singleLine="true" />
+            <EditText
+                android:id="@+id/editTextConfirmPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/confirm_password_text"
+                android:inputType="textPassword"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:minWidth="300dp"
+                android:minHeight="40dp"
+                android:background="#ffffff"
+                android:singleLine="true" />
+            <EditText
+                android:id="@+id/editTextRestauName"
+                android:hint="@string/hint_restaurant_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:background="#ffffff"
+                android:minHeight="40dp"
+                android:minWidth="300dp"/>
+            <EditText
+                android:id="@+id/editTextDescription"
+                android:hint="@string/hint_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:background="#ffffff"
+                android:minHeight="40dp"
+                android:minWidth="300dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/text_title_cuisine"
+                android:id="@+id/textView3"
+                android:textColor="#ffffff"
+                android:layout_centerHorizontal="true"
+                 />
+            <CheckBox
+                android:id="@+id/checkboxCuisine1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_1"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxCuisine2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_2"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxCuisine3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_3"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxCuisine4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_4"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxCuisine5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_5"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxCuisine6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_6"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/text_title_budget"
+                android:id="@+id/textView4"
+                android:textColor="#ffffff"
+                android:layout_centerHorizontal="true" />
+            <CheckBox
+                android:id="@+id/checkboxBudget1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_1"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onBudgetChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxBudget2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_2"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onBudgetChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxBudget3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_3"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onCuisineChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxBudget4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_4"
+                android:textColor="#ffffff"
+                android:onClick="onBudgetChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxBudget5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_5"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onBudgetChecked"/>
+            <CheckBox
+                android:id="@+id/checkboxBudget6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_budget_6"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:onClick="onBudgetChecked"/>
+            <EditText
+                android:id="@+id/editTextLocation"
+                android:hint="@string/hint_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:background="#ffffff"
+                android:minHeight="40dp"
+                android:minWidth="300dp"/>
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/buttonCreateAccount"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Account"
-        android:layout_marginBottom="60dp" />
+        android:text="@string/button_sign_up"
+        android:textColor="#ff031c"
+        android:background="#ffffff"
+        android:layout_gravity="center"
+        android:layout_below="@+id/scrollView"
+        android:layout_centerHorizontal="true" />
 
 </LinearLayout>
