--- a/EatSmart/app/src/main/res/layout/activity_login_page.xml
+++ b/EatSmart/app/src/main/res/layout/activity_login_page.xml
@@ -73,4 +73,14 @@
         android:layout_above="@+id/editTextConfirmPassword"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="debug"
+        android:id="@+id/button5"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/editText2"
+        android:layout_alignStart="@+id/editText2"
+        android:onClick="debug" />
+
 </RelativeLayout>
