Finished Restau signup but have not tested it expect alot of bus if you will test it, created pages in preparation for restau login completion

--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -10,23 +10,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/welcome_Restaurant"
-        android:id="@+id/textView4"
-        android:layout_marginTop="122dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="DESCRIPTION"
         android:id="@+id/textView2"
-        android:layout_below="@+id/textView4"
+        android:layout_above="@+id/textView13"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="81dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,10 +24,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="CUISINE"
         android:id="@+id/textView9"
+        android:layout_above="@+id/textView15"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/textView2" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,10 +34,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="PRICE RANGE"
         android:id="@+id/textView12"
-        android:layout_marginTop="47dp"
+        android:layout_above="@+id/textView17"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView9" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,57 +44,63 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="LOCATION"
         android:id="@+id/textView14"
-        android:layout_below="@+id/editText4"
+        android:layout_above="@+id/textView18"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView2"
+        android:text="New Text"
+        android:id="@+id/textView13"
+        android:layout_above="@+id/textView9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView15"
+        android:layout_above="@+id/textView12"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView17"
+        android:layout_above="@+id/textView14"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView18"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="INSERT RESTAURANT DESCRIPTION HERE" />
+        android:layout_marginBottom="127dp" />
 
-    <EditText
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageView6"
+        android:scaleType="fitXY"
+        android:src="@drawable/button_ifl"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="INSERT CUISINE HERE" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText4"
-        android:layout_below="@+id/textView12"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="INSERT PRICE RANGE HERE" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText5"
-        android:layout_below="@+id/textView14"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="INSERT LOCATION RANGE HERE" />
-
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="edit"
-        android:id="@+id/toggleButton"
-        android:layout_above="@+id/editText"
-        android:layout_toRightOf="@+id/textView2"
-        android:textColor="#ff0000"
-        android:textOff="edit"
-        android:textOn="editing"
-        android:textSize="6dp"
-        android:button="@android:color/transparent" />
+        android:text="Save"
+        android:id="@+id/button7"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp" />
 
 </RelativeLayout>
