--- a/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
+++ b/EatSmart/app/src/main/res/layout/activity_restaurant_sign_up.xml
@@ -32,203 +32,43 @@
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:fillViewport="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/scrollView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="0.27"
-            android:layout_alignBottom="@+id/scrollView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-            <EditText
-                android:id="@+id/editTextUserName"
-                android:hint="@string/username_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:background="#ffffff"
-                android:minWidth="300dp"
-                android:minHeight="40dp"
-                android:singleLine="true" />
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/password_text"
-                android:inputType="textPassword"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:background="#ffffff"
-                android:minWidth="300dp"
-                android:minHeight="40dp"
-                android:singleLine="true" />
-            <EditText
-                android:id="@+id/editTextConfirmPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/confirm_password_text"
-                android:inputType="textPassword"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:minWidth="300dp"
-                android:minHeight="40dp"
-                android:background="#ffffff"
-                android:singleLine="true" />
-            <EditText
-                android:id="@+id/editTextRestauName"
-                android:hint="@string/hint_restaurant_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:background="#ffffff"
-                android:minHeight="40dp"
-                android:minWidth="300dp"/>
-            <EditText
-                android:id="@+id/editTextDescription"
-                android:hint="@string/hint_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:background="#ffffff"
-                android:minHeight="40dp"
-                android:minWidth="300dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/text_title_cuisine"
-                android:id="@+id/textView3"
-                android:textColor="#ffffff"
-                android:layout_centerHorizontal="true"
-                 />
-            <CheckBox
-                android:id="@+id/checkboxCuisine1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_1"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxCuisine2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_2"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxCuisine3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_3"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxCuisine4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_4"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxCuisine5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_5"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxCuisine6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_cuisine_6"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/text_title_budget"
-                android:id="@+id/textView4"
-                android:textColor="#ffffff"
-                android:layout_centerHorizontal="true" />
-            <CheckBox
-                android:id="@+id/checkboxBudget1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_1"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onBudgetChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxBudget2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_2"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onBudgetChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxBudget3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_3"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onCuisineChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxBudget4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_4"
-                android:textColor="#ffffff"
-                android:onClick="onBudgetChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxBudget5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_5"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onBudgetChecked"/>
-            <CheckBox
-                android:id="@+id/checkboxBudget6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_budget_6"
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:onClick="onBudgetChecked"/>
-            <EditText
-                android:id="@+id/editTextLocation"
-                android:hint="@string/hint_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:background="#ffffff"
-                android:minHeight="40dp"
-                android:minWidth="300dp"/>
-        </LinearLayout>
-    </ScrollView>
+    <EditText
+        android:id="@+id/editTextUserName"
+        android:hint="@string/username_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:background="#ffffff"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/password_text"
+        android:inputType="textPassword"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:background="#ffffff"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/editTextConfirmPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/confirm_password_text"
+        android:inputType="textPassword"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:minWidth="300dp"
+        android:minHeight="40dp"
+        android:background="#ffffff"
+        android:singleLine="false" />
 
     <ImageButton
         android:layout_width="wrap_content"
