--- a/EatSmart/app/src/main/res/layout/activity_filter.xml
+++ b/EatSmart/app/src/main/res/layout/activity_filter.xml
@@ -4,9 +4,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.filter">
+    tools:context="com.example.jerem.eatsmart.filter"
+    android:onClick="get_entry">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView33" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_get_entry"
+        android:id="@+id/button13"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="get_entry" />
 
 </RelativeLayout>
