--- a/EatSmart/app/src/main/res/layout/activity_filter.xml
+++ b/EatSmart/app/src/main/res/layout/activity_filter.xml
@@ -7,17 +7,119 @@
     tools:context="com.example.jerem.eatsmart.filter"
     android:onClick="get_entry">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView33" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_filter_options"
+        android:id="@+id/textView33"
+        android:gravity="center"
+        android:layout_marginTop="44dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/text_title_cuisine"
+        android:id="@+id/textView36"
+        android:gravity="center"
+        android:layout_below="@+id/textView33"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_get_entry"
         android:id="@+id/button13"
-        android:layout_centerVertical="true"
+        android:onClick="get_entry"
+        android:layout_gravity="center_vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView33"
+        android:layout_alignEnd="@+id/textView33"
+        android:layout_marginBottom="54dp" />
+
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView36"
         android:layout_centerHorizontal="true"
-        android:onClick="get_entry" />
+        android:id="@+id/tableLayout">
+        <TableRow>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_1"
+                android:id="@+id/checkBox"
+                android:checked="false" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_2"
+                android:id="@+id/checkBox2"
+                 />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_3"
+                android:id="@+id/checkBox3"
+                 />
+        </TableRow>
+        <TableRow>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_4"
+                android:id="@+id/checkBox4"
+                 />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_5"
+                android:id="@+id/checkBox5"
+                 />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_6"
+                android:id="@+id/checkBox6"
+                />
+        </TableRow>
+        <TableRow>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_7"
+                android:id="@+id/checkBox7"
+                 />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_8"
+                android:id="@+id/checkBox8"
+                 />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_cuisine_9"
+                android:id="@+id/checkBox9"
+                 />
+        </TableRow>
+    </TableLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/text_title_budget"
+        android:id="@+id/textView37"
+        android:layout_below="@+id/tableLayout"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
